# pyproject-template

./: .envrc  .envrc.local.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  AI_SETUP.md  CHANGELOG.md  CONTRIBUTING.md  GEMINI.md  README.md  bootstrap.py  configure.py  dodo.py  mkdocs.yml  pyproject.toml  setup-repo.py  setup-repo.sh
.agents/: hooks.json
.agents/skills/: README.md
.claude/: CLAUDE.md  claude.md  lsp-setup.md  settings.json  statusline-command.sh
.claude/agents/: implement-worker.md
.claude/commands/: checkpoint.md  close-issue.md  finalize.md  gemini-review.md  ghi-status.md  ghissue-gemini-review.md  ghissue-implement.md  ghissue-plan-both.md  ghissue-plan.md  ghissue-review-both.md  ghissue-status.md  implement.md  multi-adversarial-review.md  multi-plan.md  multi-review.md  plan-both.md  plan-issue.md  restore.md  resume.md  review-both.md  snapshot.md  where-am-i.md
.claude/hooks/: block-dangerous-commands.py  test_hook.py
.claude/rules/: README.md
.codex/: config.toml
.copilot/: README.md
.copilot/commands/: multi-adversarial-review.md  multi-plan.md  multi-review.md
.gemini/: settings.json
.gemini/commands/: checkpoint.md  checkpoint.toml  ghi-finalize.toml  ghissue-finalize.md  ghissue-implement.md  ghissue-implement.toml  ghissue-plan-stdout.md  ghissue-plan-stdout.toml  ghissue-plan.md  ghissue-plan.toml  ghissue-review-pr.md  ghissue-review-pr.toml  implement.md  multi-adversarial-review.toml  multi-plan.toml  multi-review.toml  plan-issue-stdout.md  plan-issue.md  restore.md  restore.toml  resume.md  review-pr.md  snapshot.md
.gemini/hooks/: block-dangerous-commands.py
.gemini/policies/: developer.toml
.gemini/rules/: README.md
.github/: CONTRIBUTING.md  SECURITY.md  automerge-config.json  dependabot.yml  labels.yml  pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  refactor.yml
.github/hooks/: copilot-hooks.json
.github/instructions/: README.md
.github/workflows/: benchmark.yml  breaking-change-detection.yml  ci-full-matrix.yml  ci.yml  codeql.yml  daily-check.yml  dependabot-automerge.yml  dependabot-blocked-label.yml  merge-gate.yml  mutation.yml  pr-checks.yml  release.yml  testpypi.yml
completions/: doit.bash  doit.zsh
dev/bench/: data.js
docs/: TABLE_OF_CONTENTS.md  api.md  examples.md  extensions.md  index.md  installation.md  migration.md  usage.md
docs/decisions/: 0001-install-tools-framework-archive-extraction-and-custom-urls.md  0001-pr-based-release-is-the-only-supported-flow.md  0001-use-uv-for-package-management.md  0002-use-doit-for-task-automation.md  0003-use-ruff-for-linting-and-formatting.md  0004-auto-discover-doit-tasks.md  0005-ai-agent-command-restrictions.md  0006-merge-gate-workflow.md  0007-use-mypy-for-type-checking.md  0008-pr-based-development-workflow.md  0009-use-pre-commit-hooks-for-quality-gates.md  0010-use-conventional-commits-format.md  0011-use-pytest-for-testing.md  0012-use-mkdocs-with-material-theme-for-documentation.md  0013-python-version-support-policy.md  9002-use-doit-for-task-automation.md  9003-use-ruff-for-linting-and-formatting.md  9006-merge-gate-workflow.md  9007-use-mypy-for-type-checking.md  9008-pr-based-development-workflow.md  9009-use-pre-commit-hooks-for-quality-gates.md  9010-use-conventional-commits-format.md  9011-use-pytest-for-testing.md  9012-use-mkdocs-with-material-theme-for-documentation.md  9014-use-click-for-application-cli.md  9015-install-tools-framework-archive-extraction-and-custom-urls.md  9016-unify-adr-directories.md  9017-template-tooling-and-its-tests-are-template-owned.md  README.md  adr-template.md
docs/deployment/: development.md  production.md
docs/development/: AI_SETUP.md  ci-cd-testing.md  coding-standards.md  dependabot-automerge.md  doit-tasks-reference.md  extensions.md  github-repository-settings.md  install-tools-framework.md  release-and-automation.md  tooling-roles.md
docs/examples/: README.md  add-a-feature.md  api.md
docs/getting-started/: installation.md
docs/guides/: migration.md
docs/reference/: api.md
docs/template/: ai-sync-checklist.md  index.md  manage.md  migration.md  new-project.md  tools-reference.md  updates.md
docs/usage/: basics.md  cli.md
examples/: README.md  advanced_usage.py  basic_usage.py  cli_usage.py
examples/api/: __init__.py  config.py  deps.py  errors.py  main.py  schemas.py
src/package_name/: __init__.py  _version.py  cli.py
tests/: conftest.py  test_bash_ban_raw_tools.py  test_benchmark_workflow.py  test_ci_full_matrix_workflow.py  test_ci_workflow.py  test_cli.py  test_codeql_workflow.py  test_delegation_matrix.py  test_dependabot_automerge_workflow.py  test_dependabot_blocked_label_workflow.py  test_doit_adr.py  test_doit_benchmark.py  test_doit_discovery.py  test_doit_github.py  test_doit_install.py  test_doit_install_tools.py  test_doit_release.py  test_example.py  test_hook_cbm_code_discovery_gate.py  test_hook_cbm_mcp_marker.py  test_hook_cbm_session_reminder.py  test_hook_context_mode_posttooluse.py  test_hook_context_mode_precompact.py  test_hook_context_mode_pretooluse.py  test_hook_context_mode_sessionstart.py  test_hook_context_mode_test_runner_reminder.py  test_hook_precompact_checkpoint.py  test_hook_ruff_fix.py  test_hook_session_resume_restore.py  test_hooks_plan_mode.py  test_logging.py  test_properties.py  test_pyproject_template_main.py  test_release_workflow.py  test_statusline_claude_usage.py  test_templates.py  test_testpypi_workflow.py
tests/benchmarks/: conftest.py  test_bench_core.py  test_bench_logging.py
tests/pyproject_template/: test_bootstrap.py  test_cleanup.py  test_pyproject_template_main.py  test_repo_settings.py  test_setup_repo.py  test_utils.py
tests/template/: test_ai_agent_assets.py  test_bootstrap.py  test_check_template_updates.py  test_cleanup.py  test_doit_adr.py  test_doit_base.py  test_doit_docs.py  test_doit_git.py  test_doit_github.py  test_doit_install_tools.py  (+10 more)
tools/: __init__.py  check-template-updates.py  generate_doc_toc.py  migrate_existing_project.py
(+197 files in other folders)
