[build-system]
requires = ["hatchling>=1.24", "hatch-vcs>=0.4"]
build-backend = "hatchling.build"

[project]
name = "package_name"
description = "A short description of your package"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.12"
dynamic = ["version"]
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
license = {file = "LICENSE"}
keywords = ["keyword1", "keyword2"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "doit>=0.36.0",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.5",
    "ruff>=0.5",
    "mypy>=1.0",
    "pre-commit>=3.7.0",
    "mkdocs-material>=9.5",
    "codespell>=2.2",
    "rich>=13.0",
    "pyproject-fmt>=2.0",
    "commitizen>=3.0",
]
security = [
    "pip-audit>=2.6",
    "bandit>=1.7",
    "pip-licenses>=4.0",
]

[project.urls]
Homepage = "https://github.com/username/package_name"
Repository = "https://github.com/username/package_name"
Documentation = "https://github.com/username/package_name/tree/main/docs"
Issues = "https://github.com/username/package_name/issues"

[project.scripts]
# Example CLI entry point (optional, remove if not needed)
# package-cli = "package_name.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/package_name"]

[tool.hatch.version]
source = "vcs"
tag-pattern = "^(?:v|d)(?P<version>.+)$"
fallback-version = "0.0.0"

[tool.hatch.build.hooks.vcs]
version-file = "src/package_name/_version.py"

[tool.ruff]
# cache-dir controlled by RUFF_CACHE_DIR environment variable (set in .envrc)
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "W",    # pycodestyle warnings
    "UP",   # pyupgrade
    "ANN",  # flake8-annotations (type hints)
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "RUF",  # Ruff-specific rules
    "SIM",  # flake8-simplify
    "ASYNC", # flake8-async
]
ignore = [
    "ANN401",  # Dynamically typed expressions (Any) - allow for now, fix incrementally
    "ANN001",  # Missing type annotation for function argument - fix incrementally
    "ANN002",  # Missing type annotation for *args
    "ANN003",  # Missing type annotation for **kwargs
    "ANN201",  # Missing return type annotation for public function
    "ANN202",  # Missing return type annotation for private function
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
# cache_dir controlled by MYPY_CACHE_DIR environment variable (set in .envrc)
python_version = "3.12"
# Strict type checking
disallow_untyped_defs = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
# Additional strict checks
check_untyped_defs = true
disallow_any_generics = false
disallow_incomplete_defs = true
disallow_subclassing_any = true
no_implicit_optional = true
strict_equality = true
warn_redundant_casts = true
warn_unreachable = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "--strict-config --strict-markers"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
branch = true
source = ["package_name"]
# data_file controlled by COVERAGE_FILE environment variable (set in .envrc)

[tool.coverage.report]
skip_covered = false
show_missing = true

[tool.coverage.html]
directory = "tmp/htmlcov"

[tool.coverage.xml]
output = "tmp/coverage.xml"

[tool.bandit]
exclude_dirs = ["tests", "tmp", ".venv"]
skips = ["B101"]  # Skip assert_used - asserts are fine in tests

[tool.codespell]
skip = "tmp,.venv,.git,*.lock,*.pyc,__pycache__"
ignore-words-list = "crate"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.0.0"
tag_format = "v$version"
version_provider = "scm"
